--- a/kurssi.html
+++ b/kurssi.html
@@ -5,15 +5,14 @@
     <title>JSON Osa I</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css"> <!-- Linkitetään tyylitiedosto -->
+    <link rel="stylesheet" href="style.css"> <!-- CSS -->
 </head>
 
 <body>
-    <h1>JSON testi sivu</h1>
     <div id="vastaus"></div>
 
     <script>
-        // Haetaan JSON-data
+        // JSON-data import
         fetch('https://villex0.github.io/data.json')
             .then(function (response) {
                 return response.json();
@@ -25,7 +24,7 @@
                 document.getElementById("vastaus").innerHTML = "<p>Tietoa ei pystytä hakemaan</p>";
             });
 
-        // Funktio, joka kirjoittaa haetun datan HTML-sivulle
+        // kirjoittaa datan sivulle
         function kerro(data) {
             var teksti = "";
 
