--- a/toteutus.html
+++ b/toteutus.html
@@ -11,7 +11,10 @@
 <body style="background-color: #ffcccb;">
     <nav>
         <ul>
-            <li><a href="kurssi.html">JSON OSA I</a></li>
+            <li><a href="kurssi.html">Tehtävä 1</a></li>
+            <li><a href="toteutus.html">Tehtävä 2</a></li>
+            <li><a href="tapahtumat.html">Tehtävä 3 - Tapahtumat</a></li>
+            <li><a href="saa.html">Tehtävä 3 - Sää</a></li>	
         </ul>
     </nav>
 
